--- a/index.html
+++ b/index.html
@@ -160,6 +160,9 @@ document.getElementById('totalRevenue').innerText = "R76,500";
 document.getElementById('paidApplicants').innerText = 120;
 document.getElementById('aiStatus').innerText = "AI Agents operational";
 
+<div data-icon="dashboard"></div>
+<script src="js/loadIcons.js" 
+type="module"></script>
 </script>
 
 </body>
